--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!-- 
-    Class 1:
-        1.1 Wireframe your project
-        1.2 Fork and clone the repo and set up your project workspace
-    Class 2:  
-        2.1 Link your files in the head of the docment Add a Nav Bar to your site - It should have three links (Portfolio, About, and Contact) 
-        2.2 Add a div for each section. Within section add a contatiner div with the appropriate number of rows and columns
-    Class 3:  
-        3.1 Add thumbnails and other custom component (button, modal, font) using bootstrap Documentation 
-        3.2 Add CSS and add your site to gh-pages 
--->
-
 <!DOCTYPE html>
 <head>   
     <!--Title -->
@@ -52,22 +40,20 @@
                     <div class="thumbnail">
                         <img class=thumbnail-photo src="https://a00000820018-live-cc36dd0ff06f46c08f9308e5144c2f82-209a3c0.s3.amazonaws.com/filer_public_thumbnails/filer_public/e3/49/e34986cc-0ac7-4579-a5a9-56ff61aedeaa/pomeranian_168992033.jpg__1170x0_q90_subsampling-2_upscale.jpg">
                             <div class="caption">
-                                <h3>Puppies! Puppies Everywhere!</h3>
-                                <p>First they're a puppy, then they're a dog.</p>
-                                <p><a href="#" class="btn btn-primary, btn-lg" role="button" data-toggle="modal" data-target="#project1">Read More</a> <a target="_blank" href="https://en.wikipedia.org/wiki/Puppy" class="btn btn-default" role="button">Check out this project</a></p>
+                                <h3>Rock, Paper, Scissors</p>
+                                <p><a href="#" class="btn btn-primary, btn-lg" role="button" data-toggle="modal" data-target="#project1">Read More</a> <a target="_blank" href=" https://vacxozzy.github.io/advanced_rockpaperscissors_startercode/" class="btn btn-default" role="button">Check out this project</a></p>
                             </div>
                                 <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel">Puppies are pretty cool.</h4>
+                                                <h4 class="modal-title" id="myModalLabel">Rock, Paper, Scissors</h4>
                                             </div>
                                             <div class="modal-body">
-                                                <p>Ah yes, the most precious thing: a puppy. Here are some pictures of puppies and a bit about them:</p>
+                                                <p>Using if else statements I created a rock paper scissors game that takes the users input and genertes a random answer from the computer to compete with the user. Based on then answers, the user will be told whether they have won or lost the game or have a tie. Based on the answer that the user and computer say the picture will change to what they have chosen.</p>
                                                 <img class="modal-photos" src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pug-puppies/pug-puppy-3.jpg"></img>
-                                                <h5><strong>Pugs</strong></h5>
-                                                <p>This is a pug puppy laying down taking a nap.</p>
+
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Awesome</button>
@@ -160,15 +146,6 @@
             </form>
         </div>
     </div>
-    <!-- About Section -->
-   
-
-    <!-- Contact Section -->
-
-
-    <!-- Footer -->
-
-    
     <!-- Jquery Script -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
